--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="title6_navigation">Settings</string>
     <string name="title7_navigation">Log Out</string>
     <string name="title8_navigation">Cart</string>
-    <string name="title_description">V landscaper has features of auto and manual landscaping. User can buy plants
+    <string name="title_description">V landscaper has features of landscaping. You can check plants in 3D view in realtime environment. User can buy plants
     and related accessories </string>
     <string name="title_welcome">Welcome to V Landscaper</string>
 
@@ -23,7 +23,7 @@
     <string name="third_slide">Landscaping</string>
     <string name="description1">Buy plants and plant related accessories</string>
     <string name="description2">We deliver your plants at your door step </string>
-    <string name="description3">Here you can do manual as well as auto landscaping</string>
+    <string name="description3">We have lot of beautiful Landscaping design and you can check plant in realtime environment in 3D view</string>
     <string name="rePassword">Re-Enter Password</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
@@ -32,12 +32,12 @@
     <string name="already">Already have an account  .</string>
     <string name="donot">Do not have an account  </string>
     <string name="signin">Sign In</string>
-    <string name="txtMake">Make Your Envirnoment Green</string>
+    <string name="txtMake">Make Your Environment Green</string>
     <string name="txtHomeDes">Even if the Resurrection were established upon one of you while
         he has in his hand a sapling, let him plant it.</string>
-    <string name="title_landscaping">Do Auto and Manual Landscaping</string>
+    <string name="title_landscaping">See Landscaping designs and do Manual Landscaping</string>
     <string name="title_landscaping1">Decorate Your Surrounding</string>
-    <string name="title_autoLandscaping">Auto Landscaping</string>
+    <string name="title_autoLandscaping">Landscaping Designs</string>
     <string name="title_manualLanscaping">Manual Landscaping</string>
     <string name="title_forget">Forget Password??</string>
     <string name="title_resetPass">Reset Password</string>
@@ -46,4 +46,10 @@
     <string name="title_flower">Jasmine</string>
     <string name="title_quantity">Quantity</string>
     <string name="title_btnCart">Add To Cart</string>
+
+    <string-array name="plants">
+        <item>Indoor</item>
+        <item>Outdoor</item>
+    </string-array>
 </resources>
+
